--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.2.0", 
     "react-scripts": "4.0.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "react-bootstrap": "^1.5.0",
     "typescript-plugin-css-modules": "^3.2.0"
   }
 }
